@@ -3,15 +3,14 @@ module gitlab.com/tslocum/netris
 go 1.13
 
 require (
-	github.com/anmitsu/go-shlex v0.0.0-20161002113705-648efa622239 // indirect
-	github.com/creack/pty v1.1.9
-	github.com/flynn/go-shlex v0.0.0-20150515145356-3f9db97f8568 // indirect
+	github.com/anmitsu/go-shlex v0.0.0-20200514113438-38f4b401e2be // indirect
+	github.com/creack/pty v1.1.11
 	github.com/gdamore/tcell v1.3.0
-	github.com/gliderlabs/ssh v0.2.2
+	github.com/gliderlabs/ssh v0.3.0
 	github.com/mattn/go-isatty v0.0.12
 	gitlab.com/tslocum/cbind v0.1.1
-	gitlab.com/tslocum/cview v1.4.4-0.20200220174815-3bf6bb259c75
-	golang.org/x/crypto v0.0.0-20200220183623-bac4c82f6975
-	golang.org/x/sys v0.0.0-20200219091948-cb0a6d8edb6c // indirect
-	gopkg.in/yaml.v2 v2.2.8
+	gitlab.com/tslocum/cview v1.4.6
+	golang.org/x/crypto v0.0.0-20200510223506-06a226fb4e37
+	golang.org/x/sys v0.0.0-20200519105757-fe76b779f299 // indirect
+	gopkg.in/yaml.v2 v2.3.0
 )
